Rounded all kcal/day to nearest 1
Rounded weight to nearest 1
Rounded age to 0.1
Removed units from interior of stacked bar chart
Added disclaimer
Removed fat free mass percent control
Relabeled fat mass percent slider to go from "muscular" to "non", changed slider range
Added help button for heart graphic, indicates healthy BMI values
Moved BMI readout from scale to control panel

New in 0.00.21 (4-30-2008)
Added more junk foods
Exercises are standardized and listed in units of 1 hour each
Added bar chart total readout on top of bar chart
Renamed Fat Mass % to Body Fat %
Fixed: Can't read "protein" word on the bar chart, made text scale down
Added numeric readouts to bar chart
Improved layout of exercise and calories selection panels, so that things line up and there are no scroll bars
    Also set text to line up
    Also, items bunch up near the top when there are a small number of items

New in 0.00.20 (4-29-2008)
Removed "Restart" button from clock controls
Fixed: Sim should not be running on startup
Reduced simulation rate to 30% of previous rate
Added other base options for diet, including "none"
Fixed: Layout for food summary panel should update after food removed
Fixed: Character Graphic: 180 lbs should look much fatter
Fixed: Fix blinking stroke graphic on the character
Fixed: Rename "fat-free mass" to "Other" or "non-fat" mass, sounds too much like "fat-free" used in foods.
Fixed: Need better carbs pic for bar chart
Fixed: Weight text box needs more columns.
Renamed "activity" to "lifestyle" in the stacked bar chart
Removed confusing "professional athlete" option

0.00.18
Added better behavior for heart/health indicator, based on BMI
Fixed: Constrain slider range: Snap after release
Added graphical icons to bar chart elements
Fixed: -weight in pounds triple numbers readout on gray slider do not fit inside box alloted
Fixed: -dude is too tall (head goes off screen) at 5'9"
Calorie editor dialogs pop up south, to not obscure main area, also is smaller